# mybot

./: CLAUDE.md  README.md  pyproject.toml  removepycache.sh  run_tests.sh
.github/workflows/: ci.yml
mybot/: __init__.py  telemetry.py  templates.py
mybot/agent/: classifier.py  loop.py  runner.py
mybot/agent/tools/: __init__.py  base.py  mcp.py  registry.py  shell.py  subagent.py  web_search.py
mybot/bus/: events.py  queue.py
mybot/cli/: commands.py  stream.py
mybot/config/: loader.py  paths.py  schema.py
mybot/cron/: types.py
mybot/providers/: anthropic.py  base.py
templates/classifier/: system.md
templates/tools/: shell.md  subagent.md  web_search.md
tests/: conftest.py  test_bus.py  test_classifier.py  test_config.py  test_loop.py  test_provider_anthropic.py  test_provider_base.py  test_runner.py  test_telemetry.py  test_templates.py  test_tools_mcp.py  test_tools_registry.py  test_tools_shell.py  test_tools_subagent.py  test_tools_web_search.py
