[project]
name = "mybot"
version = "0.1.0"
dependencies = [
    "typer",
    "httpx",
    "ddgs",
    "opentelemetry-api",
    "arize-phoenix-otel",
    "openinference-instrumentation-anthropic",
    "mcp",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
mybot = "mybot.cli.commands:app"
